# experiment

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  AppRoutes.tsx  LandingPage.tsx  index.css  main.d.ts  tailwind.config.js
src-tauri/: Cargo.toml  osib  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: client.rs  db.rs  errs.rs  lib.rs  main.rs  queries.rs  utils.rs  venv.rs
src-tauri/src/migrations/: 20250503125527_initial.sql
src/app/: atoms.ts  hooks.ts  tauri.ts
src/components/: AppLayout.tsx  Icons.tsx  PublicLayout.tsx  PublicNavbar.tsx
src/components/buttons/: Button.tsx  DangerGhostBtn.tsx  GhostButton.tsx  PrimaryBtn.tsx  PrimaryGhostBtn.tsx
src/components/inputs/: DirectoryInput.tsx  FileInput.tsx  PasswordInput.tsx
src/routes/: DashboardPage.tsx  DatabasesPage.tsx  LandingPage.tsx
