[package]
name = "osib"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "osib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-fs-pro = "2.4.0"
tauri-plugin-dialog = "2"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite", "chrono", "tls-native-tls", "migrate", "uuid"] }
futures = "0.3.31"
tauri-plugin-fs = "2"
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["macros"] }
libsqlite3-sys = { version = "0.30.1", features = [
    "bundled-sqlcipher"
] }
glob = "0.3.2"
